internetmodeling.com (archived on 2019-04-21)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "adult;business",
  "char_count": 6841,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 16.46,
  "homepage_snapshot_redirected_domain": "internetmodeling.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190414121538id_/https://www.internetmodeling.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190414121538id_/http%3A//internetmodeling.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "internetmodeling.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190421044953id_/https%3A//www.internetmodeling.com/privacy.htm",
  "policy_title": "InternetModeling.com - Webcam Modeling Privacy Policy",
  "policy_url": "internetmodeling.com/privacy.htm",
  "sha1": "cb71732d11ff6cfd3baed6a6fef7d3fe1905d5be",
  "simhash": 10801166962122392248,
  "simhash_updated": false,
  "site_hostname": "internetmodeling.com",
  "site_url": "http://internetmodeling.com",
  "smog": 17.66,
  "strict_updated": false,
  "timestamp": "20190421044953",
  "word_count": 1102,
  "year": 2019
}

--- a/i/in/int/internetmodeling.com.html
+++ b/i/in/int/internetmodeling.com.html
@@ -1,10 +1,10 @@
-<!--The following is the downloaded HTML source of the internetmodeling.com privacy policy that was archived on 2015-03-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20150316012525id_/https%3A//www.internetmodeling.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the internetmodeling.com privacy policy that was archived on 2019-04-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190421044953id_/https%3A//www.internetmodeling.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 		<title>InternetModeling.com - Webcam Modeling Privacy Policy</title>
 		<meta name="author" content="InternetModeling.com">
-		<meta name="copyright" content="Copyright 2015 InternetModeling.com. All rights reserved.">
+		<meta name="copyright" content="Copyright 2019 InternetModeling.com. All rights reserved.">
 		<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -32,7 +32,8 @@
           </div>
           <div class="col-xs-4 col-sm-4 col-md-6 contact">
             <nav>
-			<a href="https://www.internetmodeling.com/models.htm">Model Login</a> • <a href="https://www.internetmodeling.com/agents.htm">Agent Login</a>            </nav>
+			<a href="https://www.internetmodeling.com/models.htm">Model Login</a> • <a href="https://www.internetmodeling.com/agents.htm">Agent Login</a> 			• <a href="https://www.internetmodeling.com/contact_us.htm">Contact</a>
+            </nav>
             <div class="call-us"><img src="/images/layout/phone.png" width="200" height="16" alt="Webcam Jobs"></div>
           </div>
         </div>
@@ -54,10 +55,10 @@
           <ul class="nav navbar-nav">
             <li id="nav_home"><a href="/">Home</a></li>
             <li id="nav_aboutUs"><a href="/about_us.htm">About</a></li>
+            <li id="testimonials"><a href="/testimonials.htm">Testimonials</a></li>
             <li id="nav_webcamNetwork"><a href="/cam/webcam_network.htm">Our Sites</a></li>
-            <li><a href="/test_your_skills.htm">Test Your Skills</a></li>
             <li id="nav_faq"><a href="/faq.htm">FAQ</a></li>
-            <li id="contact_us"><a href="/contact_us.htm">Contact</a></li>
+            <li id="nav_test"><a href="/test_your_skills.htm">Test Your Skills</a></li>
           </ul>
         </div><!--/.nav-collapse -->
         <div class="buttons-panel">
@@ -150,42 +151,42 @@ that such changes shall only apply to information gathered on or after the date 
         </div>
 
         <p>Internet Modeling is one of the oldest webcam modeling agencies offering the highest paying webcam jobs in the industry, with payouts of up to 70% for both live shows and recorded videos!</p>
-<p>© Copyright 1998-2015 <a href="/" class="flink">Internet Modeling</a>. All rights reserved.</p>      </div>
+<p>© Copyright 1998-2019 <a href="/" class="flink">Internet Modeling</a>. All rights reserved.</p>      </div>
       <div class="hidden-xs col-xs-12 col-sm-2 col-md-2">
-        <h4>Main</h4>
+        <h4>Info</h4>
         <ul class="fmenu">
           <li><a href="/">Home</a></li>
           <li><a href="/about_us.htm">About</a></li>
-          <li><a href="/faq.htm">FAQ</a></li>
+          <li><a href="/testimonials.htm">Testimonials</a></li>
           <li><a href="/cam/webcam_network.htm">Our Sites</a></li>
+          <li><a href="/faq.htm">FAQ</a></li>
           <li><a href="/webcam_model_tutorial.htm">Model Tutorial</a></li>
-          <li><a href="/test_your_skills.htm">Test Your Skills</a></li>
-          <li><a href="https://www.internetmodeling.com/application.htm">Model Application</a></li>
-          <li><a href="https://www.internetmodeling.com/become_an_agent.htm">Agent Application</a></li>
+          <li><a href="/webcam_jobs.htm">Webcam Jobs</a></li>
+          <li><a href="/privacy.htm">Privacy Policy</a></li>
+          <li><a href="/site_map.htm">Site Map</a></li>
+          <li><a href="/contact_us.htm">Contact</a></li>
         </ul>
       </div>
       <div class="hidden-xs col-sm-2 col-md-2">
-        <h4>Other</h4>
+        <h4>Models</h4>
         <ul class="fmenu">
-          <li><a href="/contact_us.htm">Contact</a></li>
-          <li><a href="https://www.internetmodeling.com/models.htm">Model Login</a></li>
-          <li><a href="https://www.internetmodeling.com/agents.htm">Agent Login</a></li>
-          <li><a href="/webcam_jobs.htm">Webcam Jobs</a></li>
+          <li><a href="/test_your_skills.htm">Test Your Skills</a></li>
+          <li><a href="/application.htm">Model Application</a></li>
+          <li><a href="/become_an_agent.htm">Agent Application</a></li>
           <li><a href="/webcam_model_agreement.htm">Model Agreement</a></li>
-          <li><a href="/privacy.htm">Privacy Policy</a></li>
           <li><a href="/s2257.htm">2257 Statement</a></li>
-          <li><a href="/site_map.htm">Site Map</a></li>
+          <li><a href="https://youtube.com/c/internetmodelingagency" target="_blank">Internet Modeling Reviews</a></li>
+          <li><a href="/models.htm">Model Login</a></li>
+          <li><a href="/agents.htm">Agent Login</a></li>
         </ul>
       </div>
       <div class="hidden-xs col-sm-2 col-md-2">
         <h4>Social</h4>
         <ul class="fmenu">
-          <li class="facebook"><a href="http://www.facebook.com/webcamjobs" title="InternetModeling.com" target="_blank">Facebook</a></li>
-          <li class="twitter"><a href="http://www.twitter.com/webcams" title="InternetModeling.com" target="_blank">Twitter</a></li>
-          <li class="google"><a href="https://www.google.com/+Internetmodelingagency" rel="publisher" title="InternetModeling.com" target="_blank">Google+</a></li>
+          <li class="instagram"><a href="https://instagram.com/modeling" title="Internet Modeling" target="_blank">Instagram</a></li>
+          <li class="twitter"><a href="https://www.twitter.com/webcams" title="InternetModeling.com" target="_blank">Twitter</a></li>
+          <li class="facebook"><a href="https://www.facebook.com/webcamjobs" title="InternetModeling.com" target="_blank">Facebook</a></li>
           <li class="pinterest"><a href="https://www.pinterest.com/cammodel/internetmodeling-reviews/" title="InternetModeling.com Reviews" target="_blank">Pinterest</a></li>
-          <li class="instagram"><a href="http://instagram.com/internetmodel" title="InternetModeling.com" target="_blank">Instagram</a></li>
-          <li class="vimeo"><a href="http://www.vimeo.com/internetmodeling" title="InternetModeling.com Review" target="_blank">Vimeo</a></li>
           <li class="youtube"><a href="https://www.youtube.com/c/internetmodelingagency/videos" title="InternetModeling.com Reviews" target="_blank">YouTube</a></li>
         </ul>
       </div>
