--- a/i/in/ind/indiacom.com.html
+++ b/i/in/ind/indiacom.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the indiacom.com privacy policy that was archived on 2017-09-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170920183845id_/http%3A//www.indiacom.com/yellowpage/privacypolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the indiacom.com privacy policy that was archived on 2019-04-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190421080013id_/https%3A//www.indiacom.com/yellowpage/privacypolicy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		
@@ -608,15 +608,33 @@ function hidecatcity(obj)
       </div>
 
       <div class="imgcss">
-        <a href="https://in.linkedin.com/in/indiacom" target="_blank">
+        <a href="https://in.linkedin.com/company/indiacom-ltd" target="_blank">
           <img src="/rwd/home/images/linkedin.png">
         </a>
       </div>
+	  
+	  
       <div class="imgcss">
         <a href="https://www.facebook.com/indiacomlimited" target="_blank">
           <img src="/rwd/home/images/Facebook.PNG">
         </a>
       </div>
+	  
+	  
+	   <div class="imgcss">
+        <a href="https://plus.google.com/+IndiacomLimitedPune" target="_blank">
+          <img src="/rwd/home/images/google-plus.png">
+        </a>
+      </div>
+	  
+	        <div class="imgcss">
+        <a href="https://www.youtube.com/user/IndiacomTV" target="_blank">
+          <img src="/rwd/home/images/you-tube.png">
+        </a>
+      </div>
+	  
+	  
+	  
       <!--<div class="imgcss">
 						<a href="#" target="_self"><img src="/rwd/home/images/gplus.PNG" /></a>
 						</div>-->
