australiancurriculum.edu.au (archived on 2019-04-21)
{
  "alexa_rank": 42139,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 42203,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.79,
  "homepage_snapshot_redirected_domain": "australiancurriculum.edu.au",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190405052910id_/https://www.australiancurriculum.edu.au/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190405052910id_/http%3A//australiancurriculum.edu.au",
  "interval": "2019_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "australiancurriculum.edu.au",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190421110436id_/https%3A//www.australiancurriculum.edu.au/privacy-policy",
  "policy_title": "Privacy policy | The Australian Curriculum",
  "policy_url": "australiancurriculum.edu.au/privacy-policy",
  "sha1": "6db61a40e8054bf3036069e2c2a24b17ee999582",
  "simhash": 4979615813068860104,
  "simhash_updated": false,
  "site_hostname": "australiancurriculum.edu.au",
  "site_url": "http://australiancurriculum.edu.au",
  "smog": 17.32,
  "strict_updated": true,
  "timestamp": "20190421110436",
  "word_count": 6407,
  "year": 2019
}

--- a/a/au/aus/australiancurriculum.edu.au.html
+++ b/a/au/aus/australiancurriculum.edu.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the australiancurriculum.edu.au privacy policy that was archived on 2018-12-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181213151927id_/https%3A//www.australiancurriculum.edu.au/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the australiancurriculum.edu.au privacy policy that was archived on 2019-04-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190421110436id_/https%3A//www.australiancurriculum.edu.au/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" prefix="og: http://ogp.me/ns#" data-open=""><head>
     <meta charset="utf-8">
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="The Australian Curriculum">
     <title>Privacy policy | The Australian Curriculum</title>
-    <meta property="og:url" content="http://australiancurriculum.edu.au/privacy-policy/">
+    <meta property="og:url" content="https://www.australiancurriculum.edu.au/privacy-policy/">
         <meta property="og:title" content="Privacy policy">
         <meta property="og:type" content="website">
 
@@ -75,7 +75,7 @@
 <div class="container">
     <div class="row">
         <div class="col-m-9">
-            <nav role="navigation" data-megamenu="" class="megamenu open visible" id="megamenu-FoXxnaWO">
+            <nav role="navigation" data-megamenu="" class="megamenu open visible" id="megamenu-4IFBHsZP">
                 
                 <ul class="first-tier">
                             <li class="has-child" aria-haspopup="true">
@@ -510,7 +510,7 @@
                                                 <ul class="third-tier">
 
                                                         <li class="linkItem">
-                                                                <a class="primary-matters" href="/resources-and-publications/publications/primary-matters-issue-15-september-2018/">
+                                                                <a class="primary-matters" href="/resources-and-publications/publications/primary-matters-issue-17-march-2019/">
         <svg class="primary-matters">
             <use xlink:href="/css/src/site/img/icons/sprite/sprite.svg#chevron-right"></use>
         </svg>Primary matters
@@ -646,17 +646,17 @@
             </a>
             <div class="share-wrapper">
                 <div></div>
-                <a href="https://www.facebook.com/sharer/sharer.php?u=http://bit.ly/2u5kChh" target="_blank">
+                <a href="https://www.facebook.com/sharer/sharer.php?u=http://bit.ly/2u4w8tv" target="_blank">
                     <svg class="icon-30 facebook-fill">
                         <use xlink:href="/css/src/site/img/icons/sprite/sprite.svg#facebook"></use>
                     </svg>
                 </a>
-                <a href="http://twitter.com/share?text=&amp;url=http://bit.ly/2u5kChh&amp;hashtags=" target="_blank">
+                <a href="http://twitter.com/share?text=&amp;url=http://bit.ly/2u4w8tv&amp;hashtags=" target="_blank">
                     <svg class="icon-30 twitter-fill">
                         <use xlink:href="/css/src/site/img/icons/sprite/sprite.svg#twitter"></use>
                     </svg>
                 </a>
-                <a href="http://www.linkedin.com/shareArticle?url=http://bit.ly/2u5kChh" target="_blank">
+                <a href="http://www.linkedin.com/shareArticle?url=http://bit.ly/2u4w8tv" target="_blank">
                     <svg class="icon-30 linkedin-fill">
                         <use xlink:href="/css/src/site/img/icons/sprite/sprite.svg#linkedin"></use>
                     </svg>
