--- a/e/ea/eas/easier.com.html
+++ b/e/ea/eas/easier.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the easier.com privacy policy that was archived on 2017-10-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20171013034458id_/http%3A//www.easier.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the easier.com privacy policy that was archived on 2019-04-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190421115143id_/https%3A//www.easier.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	  <title>Easier - Privacy Policy</title>
@@ -7,11 +7,14 @@
 	  	  <meta name="robots" content="index, follow">
 		<link rel="shortcut icon" href="/favicon.ico">
 
+    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>    
+
+    <script type="text/javascript" src="https://s7.addthis.com/js/250/addthis_widget.js?pub=xa-4ab3b84a168099af"></script>
+
 		  	
-    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
-<script type="text/javascript" src="/sfMinifyTSPlugin/cache/79f43a5ad6e14bec0a7633a08d12baff.js"></script>
-<link rel="stylesheet" type="text/css" media="screen,projection" href="/sfMinifyTSPlugin/cache/04a2b8bee4fbb6cd0da805420a681595.css">
+    <script type="text/javascript" src="/sfMinifyTSPlugin/cache/43c68eee0da01ccfe5cc7db76d6dc00f.js"></script>
+<link rel="stylesheet" type="text/css" media="screen,projection" href="/sfMinifyTSPlugin/cache/f00eee3b6cb933d166308a6f0bb1f9ea.css">
 <!--[if lt IE 8]><link rel="stylesheet" type="text/css" media="screen" href="/css/ie7.css" /><![endif]-->
 <!--[if lt IE 7]><link rel="stylesheet" type="text/css" media="screen" href="/css/ie6.css" /><![endif]-->
 
@@ -158,7 +161,7 @@
           <li><a href="/sitemap">Sitemap</a></li>
           <li class="last"><a href="/about-us/contact">Contact Us</a></li>
         </ul>
-        <cite>Copyright © 2017 Easier Inc</cite>
+        <cite>Copyright © 2019 Easier Inc</cite>
       </div>
     
     </div>
