free-fonts.com (archived on 2019-04-21)
{
  "alexa_rank": 22970,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 2164,
  "classifier_probability": 0.82,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 8.52,
  "homepage_snapshot_redirected_domain": "free-fonts.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190409225552id_/https://www.free-fonts.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190409225552id_/http%3A//free-fonts.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "free-fonts.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190421154555id_/https%3A//www.free-fonts.com/contact%23privacy",
  "policy_title": "Contact",
  "policy_url": "free-fonts.com/contact#privacy",
  "sha1": "c3f95dabcd99309a9a8f22eafadfbd1e08e28787",
  "simhash": 17555449822447911954,
  "simhash_updated": false,
  "site_hostname": "free-fonts.com",
  "site_url": "http://free-fonts.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20190421154555",
  "word_count": 362,
  "year": 2019
}

--- a/f/fr/fre/free-fonts.com.html
+++ b/f/fr/fre/free-fonts.com.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the free-fonts.com privacy policy that was archived on 2018-10-09.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181009191032id_/https%3A//www.free-fonts.com/contact%23privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the free-fonts.com privacy policy that was archived on 2019-04-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190421154555id_/https%3A//www.free-fonts.com/contact%23privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 			<meta charset="utf-8">
 			<title>Contact</title>
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<link rel="icon" href="/favicon.ico">
-			<link rel="publisher" href="https://plus.google.com/+FreefontsPlus">
+			<!--link rel="publisher" href="https://plus.google.com/+FreefontsPlus"-->
 			<link rel="canonical" href="http://www.free-fonts.com/contact">
 			<link rel="alternate" hreflang="de" href="http://www.free-fonts.com/de/contact">
 			<link rel="stylesheet" media="all" href="/css/new.min.css" type="text/css">
@@ -66,8 +66,8 @@
 		<p>See my commitment on
 		<a href="http://www.kickstarter.com/profile/fonts"><img src="/images/kickstarter.png" width="16" height="16" title="kickstarter.com" alt="kickstarter.com"></a>
 		<a href="http://www.kiva.org/lender/fonts"><img src="https://www-kiva-org.global.ssl.fastly.net/rgit2389cad49bae10da4be0fe76ada53c00538358ad/img/favicon/favicon-16x16.png" title="kiva.org" alt="kiva.org"></a>
-		<a href="https://plus.google.com/114083067509239217736/" rel="author"><img src="https://ssl.gstatic.com/images/icons/gplus-16.png" title="Alex Neuber" alt="Alex Neuber"></a>
-		<a href="https://plus.google.com/101146424742237691651/" rel="publisher"><img src="https://ssl.gstatic.com/images/icons/gplus-16.png" title="free-fonts.com" alt="free-fonts.com"></a></p>
+		<!--a href="https://plus.google.com/114083067509239217736/" rel="author"><img src="https://ssl.gstatic.com/images/icons/gplus-16.png" title="Alex Neuber" alt="Alex Neuber"></a-->
+		<!--a href="https://plus.google.com/101146424742237691651/" rel="publisher"><img src="https://ssl.gstatic.com/images/icons/gplus-16.png" title="free-fonts.com" alt="free-fonts.com"></a--></p>
 
 		<p>If you have any questions or comments, please e-mail me:<br>
 
@@ -138,7 +138,7 @@
 		<img src="https://d36cz9buwru1tt.cloudfront.net/logo_aws.gif" alt="AWS"> &nbsp;
 		<img src="https://support.microsoft.com/library/images/support/CN/bing_logo_blue.png" alt="Bing"> &nbsp;
 		<img src="/images/twitter-64x64.png" alt="twitter"> &nbsp;
-		<a href="https://plus.google.com/101146424742237691651/" rel="publisher"><img src="https://ssl.gstatic.com/images/icons/gplus-64.png" alt="Google+"></a>
+		<!--a href="https://plus.google.com/101146424742237691651/" rel="publisher"><img src="https://ssl.gstatic.com/images/icons/gplus-64.png" alt="Google+"></a-->
 	</div>
 </section>
 						</div>
@@ -171,30 +171,29 @@
 									</div>
 								</div>
 								<ul class="popular-list">
-										<li><div class="percent" style="width:100%"><span class="icon eq"></span><a href="/search?q=Tamil%20Mcl%20Ilavai" class="name-long">Tamil Mcl Ilavai</a><span class="count">1220</span></div></li>
-										<li><div class="percent" style="width:66%"><span class="icon eq"></span><a href="/stylish-marathi" class="name-long">Stylish Marathi</a><span class="count">809</span></div></li>
-										<li><div class="percent" style="width:58%"><span class="icon eq"></span><a href="/search?q=Tamil%20Mcl" class="name-long">tamil mcl</a><span class="count">704</span></div></li>
-										<li><div class="percent" style="width:55%"><span class="icon eq"></span><a href="/search?q=Al%20Fatemi%20Lisan%20Ud%20Dawat" class="name-long">Al Fatemi Lisan Ud Dawat</a><span class="count">673</span></div></li>
-										<li><div class="percent" style="width:50%"><span class="icon eq"></span><a href="/search?q=Burn%20Book" class="name-long">Burn Book</a><span class="count">615</span></div></li>
-										<li><div class="percent" style="width:47%"><span class="icon up"></span><a href="/search?q=Sparkasse%20Rg%20Regular" class="name-long">Sparkasse Rg Regular</a><span class="count">570</span></div></li>
-										<li><div class="percent" style="width:45%"><span class="icon down"></span><a href="/sign-painter-house-script-semibold" class="name-long">Sign Painter House Script Semibold</a><span class="count">548</span></div></li>
-										<li><div class="percent" style="width:44%"><span class="icon eq"></span><a href="/cid-f1" class="name-long">CID F1</a><span class="count">539</span></div></li>
-										<li><div class="percent" style="width:39%"><span class="icon up"></span><a href="/paw-patrol" class="name-long">PAW PATROL</a><span class="count">478</span></div></li>
-										<li><div class="percent" style="width:38%"><span class="icon up"></span><a href="/terafont-varuna-fat-and-thin" class="name-long">TERAFONT VARUNA Fat And Thin</a><span class="count">466</span></div></li>
-										<li><div class="percent" style="width:37%"><span class="icon down"></span><a href="/hari-krishna-gujarati" class="name-long">hari krishna gujarati</a><span class="count">450</span></div></li>
-										<li><div class="percent" style="width:37%"><span class="icon down"></span><a href="/avenir" class="name-long">Avenir</a><span class="count">446</span></div></li>
-										<li><div class="percent" style="width:36%"><span class="icon up"></span><a href="/barbie" class="name-long">barbie</a><span class="count">435</span></div></li>
-										<li><div class="percent" style="width:34%"><span class="icon up"></span><a href="/dvb-tt-surekh" class="name-long">dvb tt surekh</a><span class="count">416</span></div></li>
-										<li><div class="percent" style="width:34%"><span class="icon down"></span><a href="/gujrati-shruti" class="name-long">Gujrati shruti</a><span class="count">410</span></div></li>
-										<li><div class="percent" style="width:32%"><span class="icon down"></span><a href="/arial" class="name-long">arial</a><span class="count">393</span></div></li>
-										<li><div class="percent" style="width:31%"><span class="icon up"></span><a href="/kruti-dev-050-marathi" class="name-long">Kruti Dev 050 Marathi</a><span class="count">384</span></div></li>
-										<li><div class="percent" style="width:29%"><span class="icon up"></span><a href="/smart-zawgyi-pro-for-windows-10" class="name-long">Smart Zawgyi Pro For Windows 10</a><span class="count">356</span></div></li>
-										<li><div class="percent" style="width:29%"><span class="icon down"></span><a href="/smart-zawgyi-pro" class="name-long">Smart Zawgyi Pro</a><span class="count">353</span></div></li>
-										<li><div class="percent" style="width:28%"><span class="icon eq"></span><a href="/lmg-arun-gujarati" class="name-long">Lmg Arun Gujarati</a><span class="count">343</span></div></li>
-										<li><div class="percent" style="width:12%"><span class="icon top"></span><a href="/adobe-sans-mm" class="name-short">Adobe Sans Mm</a><span class="note">(+27)</span><span class="count">143</span></div></li>
-										<li><div class="percent" style="width:10%"><span class="icon top"></span><a href="/acumin-pro" class="name-short">Acumin Pro</a><span class="note">(new)</span><span class="count">117</span></div></li>
-										<li><div class="percent" style="width:9%"><span class="icon top"></span><a href="/aesthetic" class="name-short">aesthetic</a><span class="note">(new)</span><span class="count">115</span></div></li>
-										<li><div class="percent" style="width:9%"><span class="icon top"></span><a href="/ml-kv-malayalam" class="name-short">Ml Kv Malayalam</a><span class="note">(new)</span><span class="count">114</span></div></li>
+										<li><div class="percent" style="width:100%"><span class="icon eq"></span><a href="/all-gujarati" class="name-long">All Gujarati</a><span class="count">1734</span></div></li>
+										<li><div class="percent" style="width:80%"><span class="icon eq"></span><a href="/cid-f1" class="name-long">CID F1</a><span class="count">1392</span></div></li>
+										<li><div class="percent" style="width:75%"><span class="icon eq"></span><a href="/stylish-marathi" class="name-long">Stylish Marathi</a><span class="count">1300</span></div></li>
+										<li><div class="percent" style="width:71%"><span class="icon up"></span><a href="/3d" class="name-long">3d</a><span class="count">1225</span></div></li>
+										<li><div class="percent" style="width:66%"><span class="icon down"></span><a href="/search?q=Hindi%20Walkman%20Chanakya%20901" class="name-long">Hindi Walkman Chanakya 901</a><span class="count">1153</span></div></li>
+										<li><div class="percent" style="width:63%"><span class="icon down"></span><a href="/barbie" class="name-long">barbie</a><span class="count">1086</span></div></li>
+										<li><div class="percent" style="width:60%"><span class="icon eq"></span><a href="/hari-krishna-gujarati" class="name-long">hari krishna gujarati</a><span class="count">1047</span></div></li>
+										<li><div class="percent" style="width:59%"><span class="icon down"></span><a href="/paw-patrol" class="name-long">PAW PATROL</a><span class="count">1022</span></div></li>
+										<li><div class="percent" style="width:57%"><span class="icon eq"></span><a href="/kruti-dev-050-marathi" class="name-long">Kruti Dev 050 Marathi</a><span class="count">993</span></div></li>
+										<li><div class="percent" style="width:57%"><span class="icon up"></span><a href="/asd" class="name-long">Asd</a><span class="count">993</span></div></li>
+										<li><div class="percent" style="width:57%"><span class="icon up"></span><a href="/horror" class="name-long">horror</a><span class="count">985</span></div></li>
+										<li><div class="percent" style="width:57%"><span class="icon up"></span><a href="/all-caps" class="name-long">all caps</a><span class="count">984</span></div></li>
+										<li><div class="percent" style="width:56%"><span class="icon down"></span><a href="/search?q=Burn%20Book" class="name-long">Burn Book</a><span class="count">967</span></div></li>
+										<li><div class="percent" style="width:56%"><span class="icon down"></span><a href="/lmg-arun-gujarati" class="name-long">Lmg Arun Gujarati</a><span class="count">966</span></div></li>
+										<li><div class="percent" style="width:55%"><span class="icon down"></span><a href="/gujrati-shruti" class="name-long">Gujrati shruti</a><span class="count">958</span></div></li>
+										<li><div class="percent" style="width:55%"><span class="icon up"></span><a href="/multi-line" class="name-long">Multi Line</a><span class="count">951</span></div></li>
+										<li><div class="percent" style="width:55%"><span class="icon down"></span><a href="/search?q=Tamil%20Mcl" class="name-long">tamil mcl</a><span class="count">950</span></div></li>
+										<li><div class="percent" style="width:54%"><span class="icon down"></span><a href="/hello-kitty" class="name-long">hello kitty</a><span class="count">942</span></div></li>
+										<li><div class="percent" style="width:54%"><span class="icon down"></span><a href="/smart-zawgyi-pro-for-windows-10" class="name-long">Smart Zawgyi Pro For Windows 10</a><span class="count">942</span></div></li>
+										<li><div class="percent" style="width:54%"><span class="icon down"></span><a href="/arial" class="name-long">arial</a><span class="count">942</span></div></li>
+										<li><div class="percent" style="width:14%"><span class="icon top"></span><a href="/college" class="name-short">College</a><span class="note">(new)</span><span class="count">245</span></div></li>
+										<li><div class="percent" style="width:13%"><span class="icon top"></span><a href="/varsity" class="name-short">Varsity</a><span class="note">(new)</span><span class="count">233</span></div></li>
+										<li><div class="percent" style="width:12%"><span class="icon top"></span><a href="/bold" class="name-short">Bold</a><span class="note">(new)</span><span class="count">208</span></div></li>
 								</ul>
 							</div>
 							<div class="box">
@@ -222,7 +221,7 @@
 								 }
 								 if (document.mmm_fo) document.write ("&amp;mmm_fo=1");
 								 document.write ("'></scr"+"ipt>");
-							//]]>--></script><script type="text/javascript" src="https://cas.criteo.com/delivery/ajs.php?zoneid=284520&amp;nodis=1&amp;cb=52023917493&amp;exclude=undefined&amp;charset=UTF-8&amp;loc=https%3A//web.archive.org/web/20181009191032id_/https%253A//www.free-fonts.com/contact%2523privacy"></script>
+							//]]>--></script><script type="text/javascript" src="https://cas.criteo.com/delivery/ajs.php?zoneid=284520&amp;nodis=1&amp;cb=14076461237&amp;exclude=undefined&amp;charset=UTF-8&amp;loc=https%3A//web.archive.org/web/20190421154555id_/https%253A//www.free-fonts.com/contact%2523privacy"></script>
 					</aside>
 				</div>
 				<footer id="footer">
@@ -239,7 +238,7 @@
 								<div class="buttons">
 									<a href="http://twitter.com/home?status=Contact%3A+https%3A%2F%2Fwww.free-fonts.com%2Fcontact" class="twitter button int">twitter</a>
 									<a href="http://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.free-fonts.com%2Fcontact&amp;title=Contact" class="facebook button int">facebook</a>
-									<a href="https://plus.google.com/share?url=https%3A%2F%2Fwww.free-fonts.com%2Fcontact" class="googleplus button int">googleplus</a>
+									<!--a href="https://plus.google.com/share?url=https%3A%2F%2Fwww.free-fonts.com%2Fcontact" class="googleplus button int">googleplus</a-->
 									<a href="http://pinterest.com/pin/create/button/?url=https%3A%2F%2Fwww.free-fonts.com%2Fcontact&amp;media=http%3A%2F%2Fwww.free-fonts.com%2Fimages%2Ffree-fonts.png&amp;description=Contact" class="pinterest button int">pinterest</a>
 									<a href="http://www.stumbleupon.com/submit?url=https%3A%2F%2Fwww.free-fonts.com%2Fcontact&amp;title=Contact" class="stumbleupon button int">stumbleupon</a>
 									<a href="mailto:?subject=Contact&amp;body=https%3A%2F%2Fwww.free-fonts.com%2Fcontact" class="email button int">email us</a>
@@ -251,7 +250,6 @@
 									<a href="#" class="fb-like-stub like-stub button int"></a>
 									<a href="#" class="g-like-stub like-stub button int"></a>
 									<a href="#" class="like-real button ext hidden"><div class="fb-like" data-href="http://www.free-fonts.com/" data-layout="box_count" data-action="like" data-show-faces="false" data-share="false"></div></a>
-									<a href="#" class="like-real button ext hidden"><div class="g-plusone" data-href="http://www.free-fonts.com/" data-size="tall"></div></a>
 								</div>
 							</div>
 						</div>
