--- a/w/wa/wab/wabafun.com.html
+++ b/w/wa/wab/wabafun.com.html
@@ -1,17 +1,17 @@
-<!--The following is the downloaded HTML source of the wabafun.com privacy policy that was archived on 2018-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181219205926id_/http%3A//www.relevantplay.com/Privacy-Policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wabafun.com privacy policy that was archived on 2019-04-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190421161449id_/http%3A//www.relevantplay.com/Privacy-Policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Privacy Policy</title>
 
 
-<script async="" src="https://www.google-analytics.com/analytics.js"></script><script language="JavaScript" type="text/javascript">window.status='Loading...';</script>    <script type="text/javascript" src="/ui/jquery/jquery-1.11.3.min.js?NS_VER=2018.2.0&amp;minver=90"></script>
-    <script type="text/javascript" src="/ui/jquery/jquery_isolation.js?NS_VER=2018.2.0&amp;minver=90"></script>
-    <script type="text/javascript" src="/javascript/NLUtil.jsp?NS_VER=2018.2.0&amp;minver=90&amp;JSP_VER=1&amp;locale=en_US"></script>
-    <script type="text/javascript" src="/javascript/NLUtil.js?NS_VER=2018.2.0&amp;minver=90"></script>
+<script async="" src="https://www.google-analytics.com/analytics.js"></script><script language="JavaScript" type="text/javascript">window.status='Loading...';</script>    <script type="text/javascript" src="/ui/jquery/jquery-1.11.3.min.js?NS_VER=2019.1.0&amp;minver=64"></script>
+    <script type="text/javascript" src="/ui/jquery/jquery_isolation.js?NS_VER=2019.1.0&amp;minver=64"></script>
+    <script type="text/javascript" src="/javascript/NLUtil.jsp?NS_VER=2019.1.0&amp;minver=64&amp;JSP_VER=1&amp;locale=en_US"></script>
+    <script type="text/javascript" src="/javascript/NLUtil.js?NS_VER=2019.1.0&amp;minver=64"></script>
 <script language="JavaScript" type="text/javascript">window.status='';</script><script type="text/javascript">ignoreResetDivSizes = true;</script>
-<!-- v=2018.2.0.90 db=33085 c=4016338 n=1 rg=5 e=0 r=17 ct=WEBSITE isstore=T https=F
+<!-- v=2019.1.0.64 db=33085 c=4016338 n=1 rg=5 e=0 r=17 ct=WEBSITE isstore=T https=F
      id=I:5 cat= sc=23 sct=PRESENTATION thm=102 bll=i:98;c:98;r:118;cr:98;
      cart=-1 price=5 cur=1 lang=en_US partner=0 leadsource=
      sco=F
@@ -20,7 +20,7 @@
 <style>
 .breadcrumb {display:none;}
 </style>
-<link rel="stylesheet" href="http://www.relevantplay.com/core/styles/pagestyles.nl?ct=-653&amp;bglt=EDE8E2&amp;bgmd=EAE6E3&amp;bgdk=7F766C&amp;bgon=BBAEA5&amp;bgoff=EDE8E2&amp;bgbar=D0864A&amp;tasktitletext=FFFFFF&amp;crumbtext=FFFFFF&amp;headertext=FFFFFF&amp;ontab=000000&amp;offtab=000000&amp;text=000000&amp;link=444444&amp;bgbody=FFFFFF&amp;bghead=FFFFFF&amp;portlet=E0D3BF&amp;portletlabel=000000&amp;bgbutton=CCCCCC&amp;bgrequiredfld=EED0BB&amp;font=Myriad+Pro%2CHelvetica%2Csans-serif&amp;size_site_content=12pt&amp;size_site_title=9pt&amp;size=1.0&amp;nlinputstyles=T&amp;accessibility=F&amp;appOnly=F&amp;NS_VER=2018.2.0">
+<link rel="stylesheet" href="http://www.relevantplay.com/core/styles/pagestyles.nl?ct=-653&amp;bglt=EDE8E2&amp;bgmd=EAE6E3&amp;bgdk=7F766C&amp;bgon=BBAEA5&amp;bgoff=EDE8E2&amp;bgbar=D0864A&amp;tasktitletext=FFFFFF&amp;crumbtext=FFFFFF&amp;headertext=FFFFFF&amp;ontab=000000&amp;offtab=000000&amp;text=000000&amp;link=444444&amp;bgbody=FFFFFF&amp;bghead=FFFFFF&amp;portlet=E0D3BF&amp;portletlabel=000000&amp;bgbutton=CCCCCC&amp;bgrequiredfld=EED0BB&amp;font=Myriad+Pro%2CHelvetica%2Csans-serif&amp;size_site_content=12pt&amp;size_site_title=9pt&amp;size=1.0&amp;nlinputstyles=T&amp;accessibility=F&amp;appOnly=F&amp;NS_VER=2019.1.0">
 
 	<title>Relevant Play</title>
 	<meta charset="utf-8">
@@ -170,10 +170,10 @@
 			<li class="dropdown user-menu checkout-hide" style="border:none;">
 				<a href="#" class="dropdown-toggle nbg" data-toggle="dropdown"> Welcome, Guest<i class="fa fa-angle-down checkout-hide"></i></a>
 				<ul class="dropdown-menu" role="menu">
-					<li><a href="https://checkout.na1.netsuite.com/c.4016338/myaccount-1-06-0/index.ssp?sc=6&amp;promocode=&amp;promocodeaction=overwrite&amp;sj=jZauNFcpGLFtkARjJIXiJ824G%3B1545253166826">My Profile</a></li>
-					<li><a href="https://checkout.na1.netsuite.com/c.4016338/myaccount-1-06-0/index.ssp?sc=6&amp;promocode=&amp;promocodeaction=overwrite&amp;sj=jZauNFcpGLFtkARjJIXiJ824G%3B1545253166826">My Orders</a></li>
-					<li class="islogin"><a href="https://checkout.na1.netsuite.com/c.4016338/checkout-2-05-0/index.ssp?is=login&amp;sc=23&amp;login=T&amp;reset=T&amp;promocode=&amp;promocodeaction=overwrite&amp;sj=jZauNFcpGLFtkARjJIXiJ824G%3B1545253166826">Log In</a></li>
-					<li class="islogout" style="display: none;"><a href="https://checkout.na1.netsuite.com/s.nl/c.4016338/sc.4/.f?logoff=T&amp;ckabandon=PU-bp_RpAqIeRA-P&amp;promocode=&amp;promocodeaction=overwrite&amp;sj=jZauNFcpGLFtkARjJIXiJ824G%3B1545253166826">Log Out</a></li>
+					<li><a href="https://checkout.na1.netsuite.com/c.4016338/myaccount-1-06-0/index.ssp?sc=6&amp;promocode=&amp;promocodeaction=overwrite&amp;sj=6gcyNxDNxpjwvWI1H66jSxdgd%3B1555863289%3B885000000">My Profile</a></li>
+					<li><a href="https://checkout.na1.netsuite.com/c.4016338/myaccount-1-06-0/index.ssp?sc=6&amp;promocode=&amp;promocodeaction=overwrite&amp;sj=6gcyNxDNxpjwvWI1H66jSxdgd%3B1555863289%3B885000000">My Orders</a></li>
+					<li class="islogin"><a href="https://checkout.na1.netsuite.com/c.4016338/checkout-2-05-0/index.ssp?is=login&amp;sc=23&amp;login=T&amp;reset=T&amp;promocode=&amp;promocodeaction=overwrite&amp;sj=6gcyNxDNxpjwvWI1H66jSxdgd%3B1555863289%3B885000000">Log In</a></li>
+					<li class="islogout" style="display: none;"><a href="https://checkout.na1.netsuite.com/s.nl/c.4016338/sc.4/.f?logoff=T&amp;ckabandon=W5IJA_mLArq_rZ1a&amp;promocode=&amp;promocodeaction=overwrite&amp;sj=6gcyNxDNxpjwvWI1H66jSxdgd%3B1555863289%3B885000000">Log Out</a></li>
 <script>
 var customer = "Guest";
 if (customer == "Guest")
@@ -188,7 +188,7 @@ else
 				</ul>
 			</li>
 		</ul>
-<p class="checkout-show">Welcome, Guest / <span class="islogin-c"><a href="https://checkout.na1.netsuite.com/c.4016338/checkout-2-05-0/index.ssp?is=login&amp;sc=23&amp;login=T&amp;reset=T&amp;promocode=&amp;promocodeaction=overwrite&amp;sj=jZauNFcpGLFtkARjJIXiJ824G%3B1545253166826">Log In</a></span><span class="islogout-c" style="display: none;"><a href="https://checkout.na1.netsuite.com/s.nl/c.4016338/sc.4/.f?logoff=T&amp;ckabandon=PU-bp_RpAqIeRA-P&amp;promocode=&amp;promocodeaction=overwrite&amp;sj=jZauNFcpGLFtkARjJIXiJ824G%3B1545253166826">Log Out</a></span></p>
+<p class="checkout-show">Welcome, Guest / <span class="islogin-c"><a href="https://checkout.na1.netsuite.com/c.4016338/checkout-2-05-0/index.ssp?is=login&amp;sc=23&amp;login=T&amp;reset=T&amp;promocode=&amp;promocodeaction=overwrite&amp;sj=6gcyNxDNxpjwvWI1H66jSxdgd%3B1555863289%3B885000000">Log In</a></span><span class="islogout-c" style="display: none;"><a href="https://checkout.na1.netsuite.com/s.nl/c.4016338/sc.4/.f?logoff=T&amp;ckabandon=W5IJA_mLArq_rZ1a&amp;promocode=&amp;promocodeaction=overwrite&amp;sj=6gcyNxDNxpjwvWI1H66jSxdgd%3B1555863289%3B885000000">Log Out</a></span></p>
 <script>
 var customer = "Guest";
 if (customer == "Guest")
@@ -233,8 +233,8 @@ else
 <input type="hidden" name="id" value="5">
 <input type="hidden" name="it" value="I">
 <input type="hidden" name="vid" value="">
-<input type="hidden" name="ck" value="PU-bp_RpAqIeRA-P">
-<input type="hidden" name="cktime" value="158196">
+<input type="hidden" name="ck" value="W5IJA_mLArq_rZ1a">
+<input type="hidden" name="cktime" value="166905">
 <input type="hidden" name="cart" value="-1">
 
 </form></td>
@@ -445,7 +445,7 @@ function nsVoid(){return;};
 </script>
 </div></div>
 <script language="JavaScript" type="text/javascript">function page_init() {
-if(typeof includedVersion2plusScript === 'function' && typeof fetchClientScripts === 'function' &&includedVersion2plusScript() && window && window.setTimeout && !fetchClientScripts()){
+if(typeof includedVersion2plusScript === 'function' && typeof fetchClientScripts === 'function' &&includedVersion2plusScript() && window && window.setTimeout && !fetchClientScripts(false)){
 	if (typeof require !== 'undefined' && typeof require.SSModuleLoader !== 'undefined') {
 		require.SSModuleLoader.perfTracking.didPoll = true;
 	}
@@ -471,9 +471,9 @@ window.phoneformat ="(123) 456-7890";
 window.loadcomplete = true;}</script>
 
 
-<!-- 192 s: 43% #42 cache: 10% #122 -->
-<!-- #76/55 #1/7  #10 -->
-<!-- Host [ sh.j10041.bos ] App Version [ 2018.2.0.90 ] -->
-<!-- COMPID [ 4016338 ] URL [ /s.nl ] Time [ Wed Dec 19 12:59:26 PST 2018 ] -->
+<!-- 216 s: 39% #47 cache: 6% #127 -->
+<!-- #81/53 #1/7  #10 -->
+<!-- Host [ sh11.prod.bos ] App Version [ 2019.1.0.64 ] -->
+<!-- COMPID [ 4016338 ] URL [ /s.nl ] Time [ Sun Apr 21 09:14:49 PDT 2019 ] -->
 <!-- Not logging slowest SQL -->
 </body></html>
