--- a/m/my/my-/my-hit.me.html
+++ b/m/my/my-/my-hit.me.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the my-hit.me privacy policy that was archived on 2018-11-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181129205158id_/http%3A//my-hit.me/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the my-hit.me privacy policy that was archived on 2019-04-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190422033704id_/http%3A//www.my-hit.me/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head>
 	<title>Privacy Policy</title>
