--- a/a/ap/apa/apachefriends.org.html
+++ b/a/ap/apa/apachefriends.org.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the apachefriends.org privacy policy that was archived on 2018-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20180623171925id_/https%3A//www.apachefriends.org/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the apachefriends.org privacy policy that was archived on 2019-04-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190422114919id_/https%3A//www.apachefriends.org/privacy_policy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html><html lang="en" style="" class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths"><head>
     <meta charset="utf-8">
 
     <!-- Always force latest IE rendering engine or request Chrome Frame -->
@@ -14,24 +14,38 @@
     
     
 
-    <link href="//d16zszyyqlzz6z.cloudfront.net/stylesheets/normalize-ef7858ef.css" rel="stylesheet" type="text/css"><link href="//d16zszyyqlzz6z.cloudfront.net/stylesheets/all-15c8c6f5.css" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/normalize-ef7858ef.css" rel="stylesheet" type="text/css"><link href="/stylesheets/all-9825f9a8.css" rel="stylesheet" type="text/css">
     <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/3.1.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-    <script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=277385395761685"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="//d16zszyyqlzz6z.cloudfront.net/javascripts/modernizr-6bfc3ff0.js" type="text/javascript"></script>
+    <script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1&amp;appId=277385395761685"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/javascripts/modernizr-6bfc3ff0.js" type="text/javascript"></script>
 
     <link rel="alternate" type="application/rss+xml" title="Apache Friends RSS Feed" href="/feed.xml">
 
-    <link href="//d16zszyyqlzz6z.cloudfront.net/images/favicon-18f9bd42.png" rel="icon" type="image/png">
+    <link href="/images/favicon-18f9bd42.png" rel="icon" type="image/png">
 
-      <script type="text/javascript">//<![CDATA[
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create','UA-76894-1','auto');ga('send','pageview');
-//]]></script>
+      <script type="text/javascript">
+        //<![CDATA[
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+          ga('create', 'UA-76894-1', 'auto');
+          ga('send', 'pageview');
+        //]]>
+      </script>
 
   </head>
 
   <body class="privacy_policy">
     <div id="fb-root"></div>
-    <script>(function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="//connect.facebook.net/en_US/all.js#xfbml=1&appId=277385395761685";fjs.parentNode.insertBefore(js,fjs);}(document,'script','facebook-jssdk'));</script>
+    <script>(function(d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) return;
+      js = d.createElement(s); js.id = id;
+      js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=277385395761685";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));</script>
     <div class="contain-to-grid">
       <nav class="top-bar" data-topbar="">
         <ul class="title-area">
@@ -103,7 +117,7 @@
       <section id="who-is-the-data-controller-of-your-personal-information">
         <h2>Who is the data controller of your personal information?</h2>
         <p>
-          We, that is Bitrock, Inc., 650 Mission Street, 3rd Floor, San Francisco, CA 94105, USA,
+          We, that is Bitrock, Inc., 900 Kearny Street, 5th Floor, San Francisco, CA 94133, USA,
           ("BitRock" or "we") are the data controller. We are responsible for, and control,
           the processing of your personal information.
         </p>
@@ -609,7 +623,7 @@
           If you have any questions or concerns about our Privacy Policy or if you want to exercise your
           rights, please send an email to
           <a href="mailto:privacy@bitrock.com">privacy@bitrock.com</a>
-          or write to us at: Bitrock, Inc., 650 Mission Street, 3rd Floor, San Francisco, CA 94105, USA.
+          or write to us at: Bitrock, Inc., 900 Kearny Street, 5th Floor, San Francisco, CA 94133, USA.
         </p>
         <p>
           You may also contact our EU representative, BitRock S.L., at
@@ -653,12 +667,12 @@
                 <li><a href="https://www.apachefriends.org/privacy_policy.html">Privacy Policy</a></li>
                 <li>
 <a target="_blank" href="http://www.fastly.com/">                    CDN provided by
-                    <img width="48" data-2x="//d16zszyyqlzz6z.cloudfront.net/images/fastly-logo@2x-dad6aac3.png" src="//d16zszyyqlzz6z.cloudfront.net/images/fastly-logo-08360cb5.png">
+                    <img width="48" data-2x="/images/fastly-logo@2x-dad6aac3.png" src="/images/fastly-logo-08360cb5.png">
 </a>                </li>
               </ul>
             </div>
             <div class="large-4 columns">
-              <p class="text-right">Copyright (c) 2018, Apache Friends</p>
+              <p class="text-right">Copyright (c) 2019, Apache Friends</p>
             </div>
           </div>
         </div>
@@ -667,7 +681,7 @@
 
     <!-- JS Libraries -->
     <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="//d16zszyyqlzz6z.cloudfront.net/javascripts/all-d8620939.js" type="text/javascript"></script>
+    <script src="/javascripts/all-d8620939.js" type="text/javascript"></script>
   
 
 </body></html>
