alignable.com (archived on 2019-04-22)
{
  "alexa_rank": 10451,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 37830,
  "classifier_probability": 0.94,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.07,
  "homepage_snapshot_redirected_domain": "alignable.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20190330221955id_/https://www.alignable.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20190330221955id_/http%3A//alignable.com",
  "interval": "2019_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "alignable.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20190422181136id_/https%3A//www.alignable.com/privacy-policy",
  "policy_title": "Privacy Policy \u2013 Alignable",
  "policy_url": "alignable.com/privacy-policy",
  "sha1": "7c3d734848f5194b7aea6c7fa52b2141ac1f4059",
  "simhash": 18128905850710728215,
  "simhash_updated": false,
  "site_hostname": "alignable.com",
  "site_url": "http://alignable.com",
  "smog": 16.07,
  "strict_updated": false,
  "timestamp": "20190422181136",
  "word_count": 6061,
  "year": 2019
}

--- a/a/al/ali/alignable.com.html
+++ b/a/al/ali/alignable.com.html
@@ -1,32 +1,32 @@
-<!--The following is the downloaded HTML source of the alignable.com privacy policy that was archived on 2018-12-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20181227015837id_/https%3A//www.alignable.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the alignable.com privacy policy that was archived on 2019-04-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20190422181136id_/https%3A//www.alignable.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
 <meta name="csrf-param" content="authenticity_token">
-<meta name="csrf-token" content="MOyjXE1j8g1nakNb2go77gSqjzeYeBpRQg3uSeDkNZNiLlx/RjUHwQ606QyuMQj2LJaDXZBuJgstI3hGzENM+w==">
+<meta name="csrf-token" content="0uRw9nhpNvVzuI894XFEIWps2+B6BHqqaQIja1GV1/V/lvsTK1CgOIa12/4aa7cDHpty+2lxbJun1Gcf+M1Itg==">
 <meta charset="utf-8">
 <meta content="chrome=1" http-equiv="X-UA-Compatible">
-<meta content="-0500" name="tz">
+<meta content="-0600" name="tz">
 <meta data-details="{&quot;pageName&quot;:&quot;Privacy Policy –&nbsp;Alignable&quot;,&quot;intent&quot;:null,&quot;intent_source&quot;:null,&quot;cuid&quot;:null,&quot;member&quot;:false}" name="page-details">
-<meta data-details="{&quot;uuid&quot;:&quot;162972de-cb1c-49b9-becc-c031e7ac0fb8&quot;,&quot;context&quot;:&quot;website&quot;,&quot;source&quot;:&quot;website&quot;,&quot;action&quot;:&quot;privacy_policy&quot;,&quot;params&quot;:&quot;{}&quot;,&quot;content_type&quot;:&quot;Website&quot;,&quot;content_sub_type&quot;:null,&quot;content_id&quot;:&quot;Privacy Policy&quot;}" name="page-resource">
-<link href="https://dmui6sf49ro3c.cloudfront.net/assets/favicon-unread-ae8f4ff2a9d4f411bdf1c3f16277cdfb250c34a9c51b61cbb9a0743e1ddf3703.png" rel="prefetch">
-<link data-default="https://dmui6sf49ro3c.cloudfront.net/assets/favicon-8f78f751c3f56dff9b7fdebc1cbc72128d00078e7c365ec50bbde72f14d3580b.png" data-unread="https://dmui6sf49ro3c.cloudfront.net/assets/favicon-unread-ae8f4ff2a9d4f411bdf1c3f16277cdfb250c34a9c51b61cbb9a0743e1ddf3703.png" href="https://dmui6sf49ro3c.cloudfront.net/assets/favicon-8f78f751c3f56dff9b7fdebc1cbc72128d00078e7c365ec50bbde72f14d3580b.png" id="favicon" rel="shortcut icon">
+<meta data-details="{&quot;uuid&quot;:&quot;e4f52fa6-18b4-460d-b264-c0cdf6850d11&quot;,&quot;context&quot;:&quot;website&quot;,&quot;source&quot;:&quot;website&quot;,&quot;action&quot;:&quot;privacy_policy&quot;,&quot;params&quot;:&quot;{}&quot;,&quot;content_type&quot;:&quot;Website&quot;,&quot;content_sub_type&quot;:null,&quot;content_id&quot;:&quot;Privacy Policy&quot;}" name="page-resource">
+<link href="https://assets.alignable.com/assets/favicon-unread-ae8f4ff2a9d4f411bdf1c3f16277cdfb250c34a9c51b61cbb9a0743e1ddf3703.png" rel="prefetch">
+<link data-default="https://assets.alignable.com/assets/favicon-8f78f751c3f56dff9b7fdebc1cbc72128d00078e7c365ec50bbde72f14d3580b.png" data-unread="https://assets.alignable.com/assets/favicon-unread-ae8f4ff2a9d4f411bdf1c3f16277cdfb250c34a9c51b61cbb9a0743e1ddf3703.png" href="https://assets.alignable.com/assets/favicon-8f78f751c3f56dff9b7fdebc1cbc72128d00078e7c365ec50bbde72f14d3580b.png" id="favicon" rel="shortcut icon">
 <meta content="width=device-width" name="viewport">
 
 <meta content="width=device-width, user-scalable=no" name="viewport">
 <title>Privacy Policy –&nbsp;Alignable</title>
 
-<link rel="stylesheet" media="all" href="https://dmui6sf49ro3c.cloudfront.net/assets/application_business-f6b7927e760f50308b1e88eebb7cb934905e3c88a0cad22d01271d18e24d25f5.css" data-turbolinks-track="reload">
-<link rel="stylesheet" media="all" href="https://dmui6sf49ro3c.cloudfront.net/packs/application_biz-71afcf9f4e644fdf8c15fb5e2f4feaea.css" data-turbolinks-track="reload">
+<link rel="stylesheet" media="all" href="https://assets.alignable.com/assets/application_business-db626ea7397c4c6eb3bac87814aada7483e383221b1c1e401de0469fb906b64c.css" data-turbolinks-track="reload">
+<link rel="stylesheet" media="all" href="https://assets.alignable.com/packs/application_biz-c2b2f8db271bdffd3c5ea37eca3105f6.css" data-turbolinks-track="reload">
 <script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="//use.typekit.net/wgr5mys.js"></script>
-<script src="https://dmui6sf49ro3c.cloudfront.net/assets/application_biz-4ede76235ecc74bcd509e481bab1fc77db1a00cea95d3fac6ea1dfe5fcae0de3.js" data-turbolinks-track="reload"></script>
-<script src="https://dmui6sf49ro3c.cloudfront.net/packs/application_biz-870c766f3c6cc0f3567c.js" data-turbolinks-track="reload"></script>
+<script src="https://assets.alignable.com/assets/application_biz-6f660f8c1ff7d6a35fccd92ddb09865d750e2f445f39ccb4802806996e9a8ac4.js" data-turbolinks-track="reload"></script>
+<script src="https://assets.alignable.com/packs/application_biz-a7bec3d102cb4770d1f6.js" data-turbolinks-track="reload"></script>
 <script>
   try{Typekit.load();}catch(e){}
 </script>
 
 <!--[if lt IE 9]>
-<script src="https://dmui6sf49ro3c.cloudfront.net/assets/ie/html5-8dd41538abd57ebaafb835bf566a9e0559d9f18fbed280669975f37bfafee3af.js"></script>
+<script src="https://assets.alignable.com/assets/ie/html5-8dd41538abd57ebaafb835bf566a9e0559d9f18fbed280669975f37bfafee3af.js"></script>
 <![endif]-->
 </head>
 <body class="website_v3 website website-privacy_policy ">
@@ -95,6 +95,9 @@ Sign Up
 </header>
 <div class="js-flyout__clickoff" id="main-website">
 <section id="page-website" style="border-top: none;">
+<div class="website-alert-wrapper">
+<div id="alert_container"></div>
+</div>
 <div class="basic-container legacy">
 <div class="outer-container">
 <h1>Privacy Policy</h1>
@@ -239,7 +242,7 @@ or contact us at:
 <div class="wrapper">
 <nav class="footer-links">
 <div class="footer-links__logo">
-<img width="180" src="https://dmui6sf49ro3c.cloudfront.net/assets/website/logo-alignable-e42be6c674d328d3ec794e197f6f2ae3d908d2d24bb171149a03edaf34410b03.svg" alt="Logo alignable">
+<img width="180" src="https://assets.alignable.com/assets/website/logo-alignable-e42be6c674d328d3ec794e197f6f2ae3d908d2d24bb171149a03edaf34410b03.svg" alt="Logo alignable">
 </div>
 <div class="footer-links__section">
 <div class="footer-links__section__title">
@@ -258,28 +261,23 @@ Support
 <a class="footer-links__section__link" href="/terms-conditions">Terms of Service</a>
 <a class="footer-links__section__link" href="/privacy-policy">Privacy Policy</a>
 <a class="footer-links__section__link" href="/code-of-conduct">Code of Conduct</a>
-</div>
-<div class="footer-links__section">
-<div class="footer-links__section__title">
-Contact
-</div>
-<a class="footer-links__section__link" href="mailto:info@alignable.com">Email Us</a>
+<a class="footer-links__section__link" href="http://support.alignable.com">Help Center</a>
 </div>
 <div class="social-icons">
 <ul>
 <li>
 <a href="https://www.facebook.com/AlignableNetwork" target="blank">
-<img alt="Facebook" src="https://dmui6sf49ro3c.cloudfront.net/assets/website/icon-facebook-ca0ed836eff62700ae226339f6a074b719a8ab4a59f7d58e7e518205961e2f22.svg">
+<img alt="Facebook" src="https://assets.alignable.com/assets/website/icon-facebook-ca0ed836eff62700ae226339f6a074b719a8ab4a59f7d58e7e518205961e2f22.svg">
 </a>
 </li>
 <li>
 <a href="https://twitter.com/Alignable" target="blank">
-<img alt="Twitter" src="https://dmui6sf49ro3c.cloudfront.net/assets/website/icon-twitter-f6dd2fafdacd9012885fa5f9d300c83acfe4f10b7b6d086ccce9dde67a3d7d9d.svg">
+<img alt="Twitter" src="https://assets.alignable.com/assets/website/icon-twitter-f6dd2fafdacd9012885fa5f9d300c83acfe4f10b7b6d086ccce9dde67a3d7d9d.svg">
 </a>
 </li>
 <li>
 <a href="http://www.linkedin.com/company/alignable" target="blank">
-<img alt="LinkedIn" src="https://dmui6sf49ro3c.cloudfront.net/assets/website/icon-linkedin-c58eab73392677a0c398c4bc84b3af8954bff02450a4f05a030effbf575385f8.svg">
+<img alt="LinkedIn" src="https://assets.alignable.com/assets/website/icon-linkedin-c58eab73392677a0c398c4bc84b3af8954bff02450a4f05a030effbf575385f8.svg">
 </a>
 </li>
 </ul>
@@ -288,7 +286,7 @@ Contact
 </div>
 <div class="reserved">
 <div class="wrapper">
-© 2017 Alignable, Inc. All rights reserved.
+2019 Alignable, Inc. All rights reserved.
 </div>
 </div>
 
